fix: yaxis label cutoff on mobile + tooltip styling

--- a/src/styles/typography.styl
+++ b/src/styles/typography.styl
@@ -16,3 +16,7 @@ body
       text-decoration-color $nanoSoftBlue
       text-decoration-thickness 2px
       text-underline-offset 2px
+
+.echarts-tooltip
+  background white !important
+  box-shadow none !important
