--- a/src/views/pages/ledger/ledger.styl
+++ b/src/views/pages/ledger/ledger.styl
@@ -53,5 +53,8 @@
 
 .ledger__chart-section-body
   padding 0 12px
-  font-family 'IBM Plex Mono', monospace
+  font-family 'Inter',sans-serif
   font-size 12px
+  &.description
+    font-size 14px
+    line-height 18px
